src/stylesheet.css
/*
  please document margin and padding values,
  the hardest thing to get right in css
 */

/* --- workspace --- */
.wboa-workspace { /* workspace indicator */
  display: flex;
  justify-items: center;
  align-items: center;
  border: none;
  /* space horizontally indicators */
  margin-left: 3px;
  margin-right: 3px;
  /* simulate presence of active indicator */
  margin-bottom: 2px;
}
.wboa-workspace.wboa-active { /* active workspace */
  border-radius: 5px;
  border-bottom: 2px solid white;
  /* disable simulation of presence of active indicator */
  margin-bottom: 0px;
}
.wboa-workspace.wboa-active.wboa-no-indicator {
  border: none !important;
  /* simulate presence of active indicator */
  margin-bottom: 2px;
}

/* --- workspace label --- */
.wboa-workspace-label { /* label text (number or name) */
  color: rgb(110, 110, 110);
  font-size: 12px;
  /* space horizontally from icons */
  margin: 0px 2px;
  /* center vertically */
  padding-top: 4px;
}
.wboa-active .wboa-workspace-label { /* active workspace label */
  color: white;
}

/* --- app --- */
.wboa-app { /* app icon */
  /* space horizontally apps */
  margin-right: 3px;
  /* simulate presence of active indicator */
  margin-top: 2px;
  /* hover effect */
  padding-top: 2px;
}
.wboa-app:hover, .wboa-app:focus {
  /* hover effect */
  padding-top: 0px;
}
.wboa-app.wboa-active { /* active app */
  border-radius: 5px;
  border-top: 2px solid white;
  /* disable simulation of presence of active indicator */
  margin-top: 0px;
}
.wboa-app.wboa-active.wboa-no-indicator {
  border: none !important;
  /* simulate presence of active indicator */
  margin-top: 2px;
}

/* --- apps group --- */
.wboa-app-group-text { /* group text (x2, x3, ...) */
  color: rgba(110, 110, 110, 0.58);
  font-size: 12px;
}
.wboa-active .wboa-app-group-text { /* active group */
  color: white;
}

/* --- common --- */
.wboa-no-rounded {
  border-radius: 0px !important;
}
.panel-button {
  border-radius: 15px;
}

